--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -6,22 +6,16 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,700,900);
 
-html {
-	height: 100%;
-
-	font-size: 18px;
-	font-weight: $normal;
+* {
+	box-sizing: border-box;
 }
 
-//body {
-//	height: 100%;
-//}
-
-a {
-	text-decoration: none;
+body {
+	background: #F3F3F3;
+	margin: 0;
 }
 
-.active {
-	font-weight: $black;
-}
+
+
+
 
