--- a/src/scss/_images.scss
+++ b/src/scss/_images.scss
@@ -5,15 +5,7 @@
  ******************************************************************************/
 
 .image {
-
-    &--small {
-        padding-left: 10px;
-        padding-right: 10px;
-
-        @media screen and (max-width: 1024px) {
-            padding-left: 0;
-            padding-right: 0;
-
-        }
-    }
+    display: block;
+    box-shadow: 1px 0px 0px rgba(0,0,0,0.06);
+    width: 100%;
 }
